1.05a -

  caching of more information (speed ups)
  $$list() added to be used as a lambda function in qmake
  equal() test added to test for equality
  MSVC.net generator added [partial solution files in vcsubdirs]

1.04a -

  subdirs supports multiple project files in a single directory.

1.03a -

  New function $$system() to extract the value of a shell call.

1.02a -

  Dependency / Mocable caching. qmake can cache these expensive operations with qmake_cache
  CONFIG.

  The parser has been improved to cover more error cases, as well as more forgiving 

  qmake now includes a special else scope to invert the previous test

  Ability to add user defined targets to UnixMakefiles.

1.01a -

 New system for library linking. This system allows a user several different features:

 1) libtool like library dependencies to static libraries build with qmake
 2) library dependencies, when on .pro depends on another library - it will
    automatically build that other library (unix makefiles only)
 3) automatic detection of configurations for Qt, if CONFIG qt is specified
    it will find the settings for the most recent Qt itself.

 Project Builder for Mac OS X is now a supported backend for qmake.

 qmake now offers a 'make uninstall' feature, to reverse the actions of a 'make install'.

 qmake can now do recursive searches in project-file mode (-r option).

1.00a -

 First release, shipped with Qt 3.0.

 qmake ships with support for Unix make, MSVC (both dsp and nmake), Borland make.