@@ -1292,80 +1292,6 @@ MakefileGenerator::processPrlFiles()
 }
 
 void
-MakefileGenerator::writeLibtoolFile(const QString &target)
-{
-    QString lname = target;
-    int slsh = target.findRev(Option::dir_sep);
-    if(slsh != -1)
-	lname = lname.right(lname.length() - slsh);
-    int dot = lname.find('.');
-    if(dot != -1)
-	lname = lname.left(dot);
-    QString fname = lname + ".la";
-    if(!project->isEmpty("DESTDIR"))
-	fname.prepend(var("DESTDIR"));
-    QString local_lt = Option::fixPathToLocalOS(fileFixify(fname, QDir::currentDirPath(), Option::output_dir));
-    QFile ft(fname);
-    if(!ft.open(IO_WriteOnly))
-	return;
-
-    QTextStream t(&ft);
-    t << "# " << lname << ".la - a libtool library file\n";
-    time_t now = time(NULL);
-    t << "# Generated by qmake/libtool (" << qmake_version() << ") (Qt "
-      << QT_VERSION_STR << ") on: " << ctime(&now) << "\n";
-
-    t << "# The name that we can dlopen(3).\n"
-      << "dlname='" << var(project->isActiveConfig("plugin") ? "TARGET" : "TARGET_x")
-      << "'\n\n";
-
-    t << "# Names of this library.\n";
-    t << "library_names='";
-    if(project->isActiveConfig("plugin")) {
-	t << var("TARGET");
-    } else {
-    	if (project->isEmpty("QMAKE_HPUX_SHLIB"))
-	    t << var("TARGET_x.y.z") << " ";
-    	t << var("TARGET_x") << " " << var("TARGET_");
-    }
-    t << "'\n\n";
-
-    // ### t << "# The name of the static archive.\n";
-
-    t << "# Libraries that this one depends upon.\n";
-    QStringList libs;
-    if(!project->isEmpty("QMAKE_INTERNAL_PRL_LIBS"))
-	libs = project->variables()["QMAKE_INTERNAL_PRL_LIBS"];
-    else
-	libs << "QMAKE_LIBS"; //obvious one
-    t << "dependency_libs = ";
-    for(QStringList::ConstIterator it = libs.begin(); it != libs.end(); ++it)
-	t << project->variables()[(*it)].join(" ") << " ";
-    t << "\n\n";
-
-    t << "# Version information for " << lname << "\n";
-    int maj = project->first("VER_MAJ").toInt();
-    int min = project->first("VER_MIN").toInt();
-    int pat = project->first("VER_PAT").toInt();
-    t << "current=" << (10*maj + min) << "\n" // best I can think of
-      << "age=0\n"
-      << "revision=" << pat << "\n\n";
-
-    t << "# Is this an already installed library.\n"
-	"installed=yes\n\n"; // ###
-
-    t << "# Files to dlopen/dlpreopen.\n"
-	"dlopen=''\n"
-	"dlpreopen=''\n\n";
-
-    QString install_dir = project->first("target.path");
-    if(install_dir.isEmpty())
-	install_dir = project->first("DESTDIR");
-    t << "# Directory that this library needs to be installed in:\n"
-	"libdir='" << Option::fixPathToTargetOS(install_dir, FALSE) << "'\n";
-}
-
-void
 MakefileGenerator::writePrlFile(QTextStream &t)
 {
     QString target = project->first("TARGET");
@@ -1435,16 +1361,7 @@ MakefileGenerator::write()
        project->isActiveConfig("link_prl")) //load up prl's'
 	processPrlFiles();
 
-#if 0
-    if((Option::qmake_mode == Option::QMAKE_GENERATE_MAKEFILE || //write prl
-       Option::qmake_mode == Option::QMAKE_GENERATE_PRL) &&
-       project->isActiveConfig("libtool") &&
-       project->first("TEMPLATE") == "lib") {
-	writeLibtoolFile(var("TARGET"));
-    }
-#endif
-
-    if(Option::qmake_mode == Option::QMAKE_GENERATE_MAKEFILE ||
+    if(Option::qmake_mode == Option::QMAKE_GENERATE_MAKEFILE || //write prl file
        Option::qmake_mode == Option::QMAKE_GENERATE_PROJECT) {
 	QTextStream t(&Option::output);
 	writeMakefile(t);
